Start Oddjob 1.7, upgrade to Java 11.